<resources>
    <string name="app_name">FinCon</string>
    <string name="create_record_button_text">Создать запись</string>
    <string name="title_activity_records_list">RecordsList</string>
    <string name="valueOfRecordName">Значение</string>
    <string name="action_settings">Settings</string>
    <string name="records_button">записи</string>
    <string name="large_text">1</string>
    <string name="description">Описание</string>
    <string name="datePickerInvokerButton">выбор даты</string>
    <string name="expences_show_button">Расходы</string>
    <string name="income_button_name">Доходы</string>
    <string name="title">FinCon</string>
    <string name="CategorySelectTitle">Категория</string>
    <string name="DescriptionSelectTitle">описание</string>
    <string name="ValueSelectTitle">сумма</string>
    <string name="DateSelectTitle">дата</string>
    <string name="CreateRecordSubmitTitle">создать запись</string>
    <string name="descriptionInputDialogTitle">Описание</string>
    <string name="valueInputDialogTitle">Значение</string>
    <string name="Expences">Расходы</string>
    <string name="Incomes">Доходы</string>
    <string name="reportMakeButton">Отчёт</string>
    <string name="makeOwnCategory">Своя категория</string>
    <string name="record_saved">Запись создана</string>
    <string name="save_button">Сохранить</string>
    <string name="cancel_button">Отмена</string>
    <string name="pick_date">Выберете дату</string>
    <string name="select_date_range">Выберете период</string>
    <string name="new_category_make">Новая категория</string>
    <string name="ok_button">Ок</string>
    <string name="close_button">закрыть</string>
    <string name="write_in_all_inputs">Заполните все поля</string>
</resources>