<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="65sp"
        android:textColor="#005892"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/makeRecordButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:drawableTopCompat="@color/buttonMain"
        app:drawableBottomCompat="@color/buttonMain" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="40dp"
        android:layout_marginHorizontal="40dp"
        android:textColor="@color/textMain"
        android:textSize="30sp"
        android:textStyle="bold"
        android:id="@+id/makeRecordButton"
        android:text="@string/records_button"
        android:background="@drawable/backround_button_main"
        android:onClick="onRecordsList"
        app:layout_constraintBottom_toBottomOf="@+id/getRecordsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/getRecordsButton"
        android:onClick="onCreateRecord"
        android:paddingVertical="40dp"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/backround_button_main"
        android:textColor="#005892"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/makeRecordButton"
        android:text="@string/create_record_button_text"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
